--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Motion Flow Matching for Human Motion Synthesis and Editing (ECCV 5540) </h1>
+          <h1 class="title is-1 publication-title">Motion Flow Matching for Human Motion Synthesis and Editing  </h1>
         
         </div>
       </div>
